# c-roguelike

./: .gitignore  CMakeLists.txt  readme.md
oboyrog/: common.h  constants.h  entity.c  entity.h  fov.c  fov.h  include_curses.c  include_curses.h  include_ncurses.h  input_handler.c  input_handler.h  item.h  main.c  message.c  message.h  renderer.c  renderer.h  targeting_list.c  targeting_list.h  tools.c  tools.h
oboyrog/ai/: ai.c  ai.h
oboyrog/comp/: position.h  stats.c  stats.h
oboyrog/dungeon/: dungeon.c  dungeon.h  room.h  tile.c  tile.h
oboyrog/input_handler/: input_handler.c  input_handler.h
oboyrog/items/: slots.h
oboyrog/messages/: message.c  message.h  messages_manager.c  messages_manager.h
oboyrog/tools/: tools.c  tools.h
